Change the footer style. Add style to correctly display the sales advisor photo on small screens. Change debug to false and push to heroku

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,7 +65,17 @@ footer {
   object-fit: cover;
 }
 
+.card-img-top.photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .fa-brands
 { 
   color: rgba(255,255,255,.55) !important;
+}
+
+ul.list-inline {
+  margin-bottom: 0;
 }
